--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  isar: ^3.1.0+1
+  path_provider: ^2.1.1
+  isar_flutter_libs:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  isar_generator:
+  build_runner:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
